--- a/dzhuzhba/index.html
+++ b/dzhuzhba/index.html
@@ -99,27 +99,34 @@
 						<p><span>Пекарня «Джубга-хлеб»</span> — это пекарня у дома предлагающая по доступным ценам свежий хлеб, горячие пироги и вкусную выпечку из натуральных продуктов. Шаговая доступность пекарни позволяет предлагать только свежую качественную продукцию, произведенную здесь же.</p>
 					</div>
 				</div>
+				<div class="col-md-12">
+					<div class="_ourbakery_title">
+						<h3>Новинки</h3>
+					</div>
+				</div>
 			</div>
-			<div class="row">
+
+			<div class="row _ourbakery_news">
+				
 				<div class="col-md-4 col-xs-12">
-					<div class="_ourbakery_block">
-						<a href="/dzhuzhba/catalogbread.html"><img src="img/categories/bread.png" alt=""></a>
-						<p>Хлеб<br>
-						</p>
+					<div class="_ourbakery_news_item text-center">
+						<img src="img/breads/list/3.png" alt="">
+						<a href="#">Хлеб«Нарезной»</a>
+						<a href="">Хлеба</a>
 					</div>
 				</div>
 				<div class="col-md-4 col-xs-12">
-					<div class="_ourbakery_block">
-						<a href="/dzhuzhba/catalogcake.html"><img src="img/categories/cakes.png" alt=""></a>
-						<p>Торты, пирожные<br>
-						</p>
+					<div class="_ourbakery_news_item text-center">
+						<img src="img/breads/list/5.png" alt="">
+						<a href="">Хлеб «Аппетитный»</a>
+						<a href="">Булочки</a>
 					</div>
 				</div>
 				<div class="col-md-4 col-xs-12">
-					<div class="_ourbakery_block">
-						<a href="/dzhuzhba/catalogbun.html"><img src="img/categories/cooperation.png" alt=""></a>
-						<p>Булочки<br>
-						</p>
+					<div class="_ourbakery_news_item text-center">
+						<img src="img/cakes/list/2.png" alt="">
+						<a href="">Торт«Ореховый»</a>
+						<a href="">Торты</a>
 					</div>
 				</div>
 				<div class="col-xs-12 _ourbakery_descr _ourbakery_hide_desc2">
