--- a/dzhuzhba/catalogbreadpage.html
+++ b/dzhuzhba/catalogbreadpage.html
@@ -86,7 +86,7 @@
 			<img src="img/breads/header.png" alt="">
 		</div>
 	</section>
-	<section class="_catalogbread">
+	<section class="_catalogbread _catalog_bread_page">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 _catalog_menu_list">
