--- a/dzhuzhba/catalogbunpage.html
+++ b/dzhuzhba/catalogbunpage.html
@@ -86,7 +86,7 @@
 			<img src="img/bun/header.png" alt="">
 		</div>
 	</section>
-	<section class="_catalogbun" >
+	<section class="_catalogbun _catalog_bun_page" >
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 _catalog_menu_list">
