--- a/dzhuzhba/catalogcakepage.html
+++ b/dzhuzhba/catalogcakepage.html
@@ -86,7 +86,7 @@
 			<img src="img/cakes/header.png" alt="">
 		</div>
 	</section>
-	<section class="_catalogcake" >
+	<section class="_catalogcake _catalog_cakes_page" >
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 _catalog_menu_list">
