--- a/turtaganai/index.html
+++ b/turtaganai/index.html
@@ -490,7 +490,171 @@
 			</div>				
 		</div>
 	</section>
-	
+	<section class="_reviews">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 text-center _reviews_title">
+					<h4>ОТЗЫВЫ</h4>
+					<span>Яркие впечатлеиния наших новоиспечённых туристов</span>
+				</div>
+				<div class="col-md-12">
+					<div class="_reviews_slider">
+						<div class="_reviews_slider_block">
+							<div class="_reviews_block">
+								<div class="_reviews_block_left">
+									<img src="img/reviews/1.png" alt="">
+								</div>
+								<div class="_reviews_block_right">
+									<h5>Ирина Овдина</h5>
+									<span>предприниматель, 27 лет. </span>
+									<h5>Камчатка.</h5>
+									<p>Самая большая частная компания, работающая с термоядерным синтезом, — это Lockheed Martin, производящая военные самолёты для армии США. В конце прошлого года Lockheed Martin заявила, что собирается создать прототип термоядерного реактора к 2019г, — и не просто термоядерного реактора, а портативного, размером с грузовик. Для удержания горячего газа, то есть плазмы, реактор Lockheed Martin будет использовать магнитное поле: оно создаётся с помощью набора сверхпроводящих катушек.</p>
+									<a href="#"><i class="fa fa-vk"></i></a>
+									<a href="#"><i class="fa fa-instagram"></i></a>
+								</div>
+							</div>
+						</div>
+						<div class="_reviews_slider_block">
+							<div class="_reviews_block">
+								<div class="_reviews_block_left">
+									<img src="img/reviews/1.png" alt="">
+								</div>
+								<div class="_reviews_block_right">
+									<h5>Ирина Овдина</h5>
+									<span>предприниматель, 27 лет. </span>
+									<h5>Камчатка.</h5>
+									<p>Самая большая частная компания, работающая с термоядерным синтезом, — это Lockheed Martin, производящая военные самолёты для армии США. В конце прошлого года Lockheed Martin заявила, что собирается создать прототип термоядерного реактора к 2019г, — и не просто термоядерного реактора, а портативного, размером с грузовик. Для удержания горячего газа, то есть плазмы, реактор Lockheed Martin будет использовать магнитное поле: оно создаётся с помощью набора сверхпроводящих катушек.</p>
+									<a href="#"><i class="fa fa-vk"></i></a>
+									<a href="#"><i class="fa fa-instagram"></i></a>
+								</div>
+							</div>
+						</div>
+						<div class="_reviews_slider_block">
+							<div class="_reviews_block">
+								<div class="_reviews_block_left">
+									<img src="img/reviews/1.png" alt="">
+								</div>
+								<div class="_reviews_block_right">
+									<h5>Ирина Овдина</h5>
+									<span>предприниматель, 27 лет. </span>
+									<h5>Камчатка.</h5>
+									<p>Самая большая частная компания, работающая с термоядерным синтезом, — это Lockheed Martin, производящая военные самолёты для армии США. В конце прошлого года Lockheed Martin заявила, что собирается создать прототип термоядерного реактора к 2019г, — и не просто термоядерного реактора, а портативного, размером с грузовик. Для удержания горячего газа, то есть плазмы, реактор Lockheed Martin будет использовать магнитное поле: оно создаётся с помощью набора сверхпроводящих катушек.</p>
+									<a href="#"><i class="fa fa-vk"></i></a>
+									<a href="#"><i class="fa fa-instagram"></i></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-12">
+					<button class="_reviews_want text-center">Хочу с вами</button>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="_form">
+		<div class="container">
+			<div class="row _form_block">
+				<img src="img/bag.png" alt="" class="_form_bag">
+				<div class="col-md-12 text-center">
+					<div class="_form_block_title">
+						<h4>Расчитаем тур который подойдёт именно вам?!</h4>
+						<span>Мы перезвоним вам уже сегодня.</span>
+					</div>
+					<div class="_form_block_sell">
+						<form action="#">
+							<input type="text" placeholder="Ваше имя *">
+							<input type="text" placeholder="Ваш E-mail *">
+							<input type="text" placeholder="Количество участников *">
+							<textarea name="" id="" cols="30" rows="10" placeholder="Вопросы и пожелания по туру *"></textarea>
+							<button>отправить заявку</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="_guides">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="_guides_block">
+						<h4>Наши гиды</h4>
+						<div class="_guides_block_list">
+							<div class="_guides_block_list_item">
+								<img src="img/guides/1.png" alt="">
+								<span>Пётр Мамонов</span>
+								<p>27 походов</p>
+							</div>
+							<div class="_guides_block_list_item">
+								<img src="img/guides/2.png" alt="">
+								<span>Вероника Панина</span>
+								<p>105 походов</p>
+							</div>
+							<div class="_guides_block_list_item">
+								<img src="img/guides/3.png" alt="">
+								<span>Игорь Жук</span>
+								<p>54 похода</p>
+							</div>
+							<div class="_guides_block_list_item">
+								<img src="img/guides/4.png" alt="">
+								<span>Вероника Панина</span>
+								<p>105 походов</p>
+							</div>
+							<div class="_guides_block_list_item">
+								<img src="img/guides/5.png" alt="">
+								<span>Пётр Мамонов</span>
+								<p>27 походов</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<div class="_bottom_wrapper">
+		<section class="_aboutautor">
+			<div class="container">
+				<div class="row">
+					<div class="_aboutautor_block">
+						<div class="_aboutautor_block_left">
+							<img src="img/autor/1.png" alt="">
+						</div>
+						<div class="_aboutautor_block_right">
+							<h5>Виталий Казаков</h5>
+							<span>директор, автор блога</span>
+							
+							<p>Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).</p>
+							<a href="#"><i class="fa fa-vk"></i></a>
+							<a href="#"><i class="fa fa-instagram"></i></a>
+							<button>перейти в блог</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer class="_footer">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="_footer_block">
+							<div class="_footer_block_contacts">
+								<h5>КОНТАКТЫ</h5>
+								<a href="#">souz18@mail.ru</a>
+								<a href="#">+7 (922) 505-00-91</a>
+								<a href="#">Москва, дом 210 оф. 9</a>
+							</div>
+							<div class="_footer_block_social">
+								<h5>Мы в соц. сетях</h5>
+								<a href="#">Facebook</a>
+								<a href="#">Вконтакте</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
+	</div>
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/jquery-2.2.3.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
@@ -500,6 +664,11 @@
 	
 	<script>
 		$('._header_main_slider').slick({
+			dots: true
+		});
+</script>
+<script>
+		$('._reviews_slider').slick({
 			dots: true
 		});
 </script>
