--- a/turtaganai/img/icon/Title.html
+++ b/turtaganai/img/icon/Title.html
@@ -18,7 +18,10 @@
 
 </head>
 
-<body>
+<body><script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='/browser-sync/browser-sync-client.js?v=2.23.7'><\/script>".replace("HOST", location.hostname));
+//]]></script>
+
 
 	<header class="_header">
 		<div class="_header_top">
