--- a/turtaganai/blog.html
+++ b/turtaganai/blog.html
@@ -80,10 +80,10 @@
 				<div class="_blog_list ">
 					<div class="_load_more_blog">
 						<div class="_blog_list_item item">
-							<h5><a href="">АЛТАЙ БЕЛУХА</a>
+							<h5><a href="/turtaganai/blogitem.html">АЛТАЙ БЕЛУХА</a>
 								</h5>
 							<span>07.02.2016</span>
-							<a href="#"><img src="img/turs/altai.jpg" alt=""></a>
+							<a href="/turtaganai/blogitem.html"><img src="img/turs/altai.jpg" alt=""></a>
 							<p>Приглашаем принять участие в увлекательном путешествии по красивейшему маршруту России
 						к подножию Белухи на Алтай. Поход для тех, кто знает что такое рюкзак, и уже имеет хотя бы 
 						самый небольшой опыт и имеет среднюю физическую подготовку.</p>
@@ -96,10 +96,10 @@
 							</div>
 						</div>
 						<div class="_blog_list_item item">
-							<h5><a href="">АЛТАЙ БЕЛУХА</a>
+							<h5><a href="/turtaganai/blogitem.html">АЛТАЙ БЕЛУХА</a>
 								</h5>
 							<span>07.02.2016</span>
-							<a href="#"><img src="img/turs/altai.jpg" alt=""></a>
+							<a href="/turtaganai/blogitem.html"><img src="img/turs/altai.jpg" alt=""></a>
 							<p>Приглашаем принять участие в увлекательном путешествии по красивейшему маршруту России
 						к подножию Белухи на Алтай. Поход для тех, кто знает что такое рюкзак, и уже имеет хотя бы 
 						самый небольшой опыт и имеет среднюю физическую подготовку.</p>
@@ -112,10 +112,10 @@
 							</div>
 						</div>
 						<div class="_blog_list_item item">
-							<h5><a href="">АЛТАЙ БЕЛУХА</a>
+							<h5><a href="/turtaganai/blogitem.html">АЛТАЙ БЕЛУХА</a>
 								</h5>
 							<span>07.02.2016</span>
-							<a href="#"><img src="img/turs/altai.jpg" alt=""></a>
+							<a href="/turtaganai/blogitem.html"><img src="img/turs/altai.jpg" alt=""></a>
 							<p>Приглашаем принять участие в увлекательном путешествии по красивейшему маршруту России
 						к подножию Белухи на Алтай. Поход для тех, кто знает что такое рюкзак, и уже имеет хотя бы 
 						самый небольшой опыт и имеет среднюю физическую подготовку.</p>
@@ -128,10 +128,10 @@
 							</div>
 						</div>
 						<div class="_blog_list_item item">
-							<h5><a href="">АЛТАЙ БЕЛУХА</a>
+							<h5><a href="/turtaganai/blogitem.html">АЛТАЙ БЕЛУХА</a>
 								</h5>
 							<span>07.02.2016</span>
-							<a href="#"><img src="img/turs/altai.jpg" alt=""></a>
+							<a href="/turtaganai/blogitem.html"><img src="img/turs/altai.jpg" alt=""></a>
 							<p>Приглашаем принять участие в увлекательном путешествии по красивейшему маршруту России
 						к подножию Белухи на Алтай. Поход для тех, кто знает что такое рюкзак, и уже имеет хотя бы 
 						самый небольшой опыт и имеет среднюю физическую подготовку.</p>
