Внес изменения в index
Внес изменения в index

--- a/turtaganai/index.html
+++ b/turtaganai/index.html
@@ -776,7 +776,7 @@
 		];
 
 		$slider.on('afterChange', function(e, slick, index) {
-		$('._header').css('background-image', 'url(../img/bg/' + bgs[index] +   '.jpg)');;
+		$('._header').css('background-image', 'url(../turtaganai/img/bg/' + bgs[index] +   '.jpg)');;
 		});
 		});	
 </script>
