--- a/turtaganai/blog.html
+++ b/turtaganai/blog.html
@@ -89,7 +89,7 @@
 						к подножию Белухи на Алтай. Поход для тех, кто знает что такое рюкзак, и уже имеет хотя бы 
 						самый небольшой опыт и имеет среднюю физическую подготовку.</p>
 							<div class="_blog_list_btn">
-								<a href="" class="_blog_list_btn_travel">Путешествия</a>
+								<a href="/turtaganai/blog.html" class="_blog_list_btn_travel">Путешествия</a>
 								<div class="_blog_list_item_social">
 									<a href="#"><i class="fab fa-vk"></i></a>
 									<a href="#"><i class="fab fa-instagram"></i></a>
@@ -105,7 +105,7 @@
 						к подножию Белухи на Алтай. Поход для тех, кто знает что такое рюкзак, и уже имеет хотя бы 
 						самый небольшой опыт и имеет среднюю физическую подготовку.</p>
 							<div class="_blog_list_btn">
-								<a href="" class="_blog_list_btn_travel">Путешествия</a>
+								<a href="/turtaganai/blog.html" class="_blog_list_btn_travel">Путешествия</a>
 								<div class="_blog_list_item_social">
 									<a href="#"><i class="fab fa-vk"></i></a>
 									<a href="#"><i class="fab fa-instagram"></i></a>
@@ -121,7 +121,7 @@
 						к подножию Белухи на Алтай. Поход для тех, кто знает что такое рюкзак, и уже имеет хотя бы 
 						самый небольшой опыт и имеет среднюю физическую подготовку.</p>
 							<div class="_blog_list_btn">
-								<a href="" class="_blog_list_btn_travel">Путешествия</a>
+								<a href="/turtaganai/blog.html" class="_blog_list_btn_travel">Путешествия</a>
 								<div class="_blog_list_item_social">
 									<a href="#"><i class="fab fa-vk"></i></a>
 									<a href="#"><i class="fab fa-instagram"></i></a>
@@ -137,7 +137,7 @@
 						к подножию Белухи на Алтай. Поход для тех, кто знает что такое рюкзак, и уже имеет хотя бы 
 						самый небольшой опыт и имеет среднюю физическую подготовку.</p>
 							<div class="_blog_list_btn">
-								<a href="" class="_blog_list_btn_travel">Путешествия</a>
+								<a href="/turtaganai/blog.html" class="_blog_list_btn_travel">Путешествия</a>
 								<div class="_blog_list_item_social">
 									<a href="#"><i class="fab fa-vk"></i></a>
 									<a href="#"><i class="fab fa-instagram"></i></a>
