--- a/turtaganai/blogitem.html
+++ b/turtaganai/blogitem.html
@@ -138,7 +138,7 @@
 								самый небольшой опыт и имеет среднюю физическую подготовку.
 							</p>
 							<div class="_blog_list_btn">
-								<a href="blog.html" class="_blog_list_btn_travel">Путешествия</a>
+								<a href="/turtaganai/blog.html" class="_blog_list_btn_travel">Путешествия</a>
 								<div class="_blog_list_item_social">
 									<a href="#"><i class="fab fa-vk"></i></a>
 									<a href="#"><i class="fab fa-instagram"></i></a>
