--- a/turtaganai/index.html
+++ b/turtaganai/index.html
@@ -26,7 +26,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-2"><div class="_header_top_logo"><a href="/turtaganai/index.html"><img src="img/logo/logo.png" alt=""></a></div></div>
-					<div class="col-md-8"><div class="_header_top_menu">
+					<div class="col-md-8 _header_top_hidemenu"><div class="_header_top_menu">
 						<nav class="_header_top_menu_main">
 							<button type="button" class="navbar-toggle">
 					    		<span class="icon-bar"></span>
@@ -86,11 +86,7 @@
 							<div class="_header_main_block">
 								<div class="_header_main_block_info">
 									<span>Зимний тур в национальный парк</span>
-									<span>
-										3-9 января<br>
-										8-13 марта<br>
-										23-28 февраля<br>
-									</span>
+									
 								</div>
 								<h2>Таганай, южный Урал</h2>
 								<p>Один из самых доступных национальных парков в России, до него близко ехать, его тропы не сложны, но он невероятно красив! Зимний поход с комфортом - это Таганай. </p>
