--- a/turtaganai/spectur.html
+++ b/turtaganai/spectur.html
@@ -26,7 +26,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-2"><div class="_header_top_logo"><a href="#"><img src="img/logo/logo.png" alt=""></a></div></div>
-					<div class="col-md-8"><div class="_header_top_menu">
+					<div class="col-md-8 _header_top_hidemenu"><div class="_header_top_menu">
 						<nav>
 							<button type="button" class="navbar-toggle">
 					    		<span class="icon-bar"></span>
